@@ -1,6 +1,8 @@
 c - crash     b - bug fix    e - enhancement    f - new feature
 
 2.3.7
+  e - pbs_mom sisters can now tolerate an explicit group ID instead of only a valid group name.
+      This helps TORQUE be more robust to group lookup failures.
 
 2.3.6
   e - in Linux, a pbs_mom will now "kill" a job's task, even if that task can no longer be
